<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:gravity="center"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/burgerking2" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/image"
        android:layout_marginBottom="40dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:padding="10dp"
        android:hint="@string/inputEmail"
        android:paddingLeft="30sp"
        android:background="@drawable/rounded_edittext_background"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="15dp"
        />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        android:padding="10dp"
        android:paddingLeft="30sp"
        android:inputType="textPassword"
        android:hint="@string/inputPasswd"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawableRight="@drawable/baseline_visibility_off_24"
        android:drawablePadding="15dp"
        android:background="@drawable/rounded_edittext_background"
        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"
        android:text="@string/Checkbox"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:buttonTint="@android:color/white"/>

    <TextView
        android:id="@+id/forgetPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_marginTop="8dp"
        android:layout_alignParentEnd="true"
        android:text="@string/ForgetPassword"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:padding="15dp"
        />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox"
        android:text="@string/button"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="35dp"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        />

    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginBtn"
        android:layout_marginBottom="10dp"
        android:text="@string/Or"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/google"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@+id/or"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"
        android:background="@drawable/gugel"
        android:layout_marginLeft="70dp"
        />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_below="@+id/or"
        android:layout_marginTop="8dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="70dp"
        android:background="@drawable/fbbb"
        />
</RelativeLayout>
